# pico-lenny-key

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  blink.c  blink_step1.c  blink_step1a.c  lenny_debug.c  lenny_keyboard.c  tusb_config_debug.h  tusb_config_hid.h
android/: AndroidManifest.xml  MainActivity.java  README.md  build.gradle  settings.gradle
android/res/xml/: device_filter.xml
